homework_kube4/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drych-server-service
  namespace: drych-namespace
spec:
  type: ClusterIP
  selector:
    app: drych-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
