homework_kube4/src/drych-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drych-ingress
  namespace: drych-namespace
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drych-server-service
            port:
              number: 80
